--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,14 +2,14 @@
   "compilerOptions": {
     // Enable latest features
 
-    "rootDir": "./src",
-    "outDir": "./dist",
     "lib": ["ESNext", "DOM"],
     "target": "ESNext",
     "module": "ESNext",
     "moduleDetection": "force",
     "jsx": "react-jsx",
     "allowJs": true,
+    "rootDir": "./src",
+    "outDir": "/dist",
 
     // Bundler mode
     "moduleResolution": "bundler",
